# menger

./: .CodeReview.md.kate-swp  .TODO.md.kate-swp  .clang-tidy  .coverage_baseline  .gitignore  .gitlab-ci.yml  .sbtopts  .scalafix.conf  AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CODE_IMPROVEMENTS.md  CODE_QUALITY_ASSESSMENT.md  CODE_REVIEW.md  CRASH.md  CodeReview.md  FILMS.md  GPU_DEVELOPMENT.md  NEXT.md  OPENCODE_IMPROVEMENTS.md  Opus46.md  PHASE_4_PLAN.md  PLANE_CLI_FEATURE.md  README.md  REFACTORING_PLAN_COMMON_MODULE.md  ROADMAP.md  SPRINT12.md  SPRINT8.md  TESTING.md  TODO.md  build.sbt  cmake  demo_multiple_lights.cpp  glass-sponge-investigation.md  release-checklist.md  resume.txt  sonar-project.properties  valgrind-suppressions.txt  valgrind.supp
.claude/: CLAUDE.md
.claude/commands/: arch-review.md  code-review.md  sprint-close.md
.claude/skills/debugging-rendering-bugs/: SKILL.md
.claude/skills/release-checklist/: SKILL.md
.git_hooks/: pre-commit  pre-push
.github/workflows/: ai-review.yml
.opencode/skills/debugging-rendering-bugs/: SKILL.md
.opencode/skills/release-checklist/: SKILL.md
.specify/memory/: constitution.md
docs/: ABSORPTION_DEBUG_FINDINGS.md  ARCHITECTURE.md  ARCHITECTURE_BACKLOG.md  ARCHITECTURE_MODULES.md  BACKLOG.md  CAUSTICS.md  CI_CD.md  ENFORCEMENT.md  FIX_PLAN.md  FRACTIONAL_LEVELS_IMPLEMENTATION.md  GPU_DEVELOPMENT.md  Glass_Implementation_Plan.md  IMAGE_SIZE_REFACTORING.md  INSTALLATION_FROM_SCRATCH.md  OptiX.md  OptixEngineRefactor.md  PHASE_4_PLAN.md  PHYSICS.md  PTX_PATH_AND_CUSTOM_INTERSECTION_DEBUG.md  RAY_STATISTICS.md  RENDERING.md  SDK_GLASS_EXTRACTION.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOW_RESIZE_FIX_ATTEMPTS.md  WINDOW_RESIZE_FIX_PLAN.md  WINDOW_RESIZE_SPEC.md  optix-api-audit.md
docs/arc42/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architectural-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md
docs/architecture/: optix-jni-decoupling.md
docs/archive/: CODE_IMPROVEMENTS.md  GLASS_RENDERING_INVESTIGATION.md  IMAGEMAGICK_SPHERE_MEASUREMENT.md  README.md  REFACTORING_PLAN_COMMON_MODULE.md  demo_transparent_shadows.cpp
docs/archive/investigations/: PLANE_CLI_FEATURE.md  PTX_LOADING_ISSUE.md
docs/archive/sprints/: SPRINT13.md  SPRINT14.md  SPRINT15.md  SPRINT16.md  SPRINT18.md  SPRINT19.md  SPRINT20.md  SPRINT21.md  SPRINT24.md  SPRINT27.md  SPRINT28.md  SPRINT30.md  SPRINT31.md  SPRINT32.md  SPRINT_7_M_ISSUES_PLAN.md
docs/archive/window-resize-bug/: test_window_resize.sh
docs/caustics/: CAUSTICS.md  CAUSTICS_ANALYSIS.md  CAUSTICS_FIX_PLAN.md  CAUSTICS_ITERATION_LOG.md
docs/dev/: adding-analytical-primitives.md  sprint-19-retrospective.md  sprint-19-spike-fractional-ias.md  sprint-19-spike-max-depth.md
docs/guide/: advanced.md  cloud.md  debugging-rendering-bugs.md  dsl-reference.md  quickstart.md  reference.md  tutorials.md  user-guide.md
docs/plans/: 2026-03-05-code-review-fixes-design.md  2026-03-05-code-review-fixes.md  2026-03-11-colored-shadows-phase1.md  2026-03-16-medium-priority-improvements.md  2026-03-27-user-guide-split.md  2026-03-28-cuda13-ci.md  2026-03-28-website-mkdocs.md  2026-03-30-nvidia-spot-polish.md  libGDX-wrapper.md  there-have-been-a-tingly-snowglobe.md
docs/sprints/: BACKLOG_FEATURES.md  FEATURE_DEPENDENCIES.md  README.md  SPRINT.md  SPRINT10.md  SPRINT11.md  SPRINT12.md  SPRINT13.md  SPRINT14.md  SPRINT15.md  SPRINT16.md  SPRINT17.md  SPRINT18.md  SPRINT19.md  SPRINT20.md  SPRINT21.md  SPRINT22.md  SPRINT23.md  SPRINT24.md  SPRINT25.md  SPRINT26.md  SPRINT27.md  SPRINT27_IMPLEMENTATION_PLAN.md  SPRINT28.md  SPRINT29.md  SPRINT30.md  SPRINT31.md  SPRINT32.md  SPRINT33.md  SPRINT34.md  SPRINT35.md  SPRINT36.md  SPRINT37.md  SPRINT38.md  SPRINT8.md  SPRINT9.md
docs/superpowers/plans/: 2026-03-25-parametric-surfaces.md  (+9 more)
docs/website/: mkdocs.yml
docs/window-resize-bug/: test_window_resize.sh
examples/dsl/: GlassSphere.scala  MengerShowcase.scala
infra/ci-runners/: README.md  ci-runners.slice  github-runner-override.conf  gitlab-runner-override.conf  install-runner-hardening.sh
menger/: build.sbt
menger-app/: build.sbt
menger-common/: build.sbt
menger-geometry/: README.md  build.sbt
menger-geometry/src/main/native/: CMakeLists.txt  CausticsRenderer.cpp  MengerJNIBindings.cpp  VideoLoader.cpp  project4d.cu
menger-geometry/src/main/native/cmake/: FindFFmpeg.cmake
menger-geometry/src/main/native/include/: MengerParams.h  VideoLoader.h
menger-geometry/src/main/native/shaders/: hit_hexadecachoron4d.cu  hit_menger4d.cu  hit_sierpinski4d.cu  menger_stub.cu  optix_shaders_menger.cu
optix-jni/: CAUSTICS_ANALYSIS.md  CAUSTICS_REFERENCES.md  CAUSTICS_TEST_LADDER.md  ENHANCEMENT_PLAN.md  SPRINT_5_PLAN.md
project/: CMakeWithoutVersionBug.scala  OptixJniSource.scala  plugins.sbt
scripts/: README-TESTING.md  README.md  SETUP-IMAGE-TESTING.md  ami-registry.tsv  auto-terminate.sh  backup-spot-state.sh  benchmark.sh  build-ami.sh  check-standards-drift.sh  check-version-consistency.sh  cleanup-spot-states.sh  integration-tests.sh  list-instances.sh  list-spot-states.sh  manual-test.sh  nvidia-spot.sh  perf-baseline.json  release.sh  restore-spot-state.sh  review.sh  setup-optix-env.fish  setup-optix-local.sh  sync-standards.sh  test-aws-config.sh  test-dsl-scenes.sh  test-fractional-levels.sh  test-optix.cpp  test-state-management.sh  test-terraform-config.sh  validate-ami-build.sh  verify-optix.sh
scripts/adapters/: gitlab-mr-review.sh
scripts/archive/: README.md
scripts/caustics-validation/: README.md  compare-caustic-delta.sh  compare-caustics.sh  render-pbrt-references.sh  thresholds.txt
scripts/reference-images/: README.md
scripts/test-assets/: test_hdr.hdr
standards/: README.md  manifest.txt  rendering-paths.txt
terraform/: README.md  ami-build.pkr.hcl  main.tf  outputs.tf  user-data.sh  variables.tf
(+645 files in other folders)
